metodos agregados para la tranasaccion

--- a/src/app/views/components/init/init.html
+++ b/src/app/views/components/init/init.html
@@ -1,21 +1,16 @@
 <div class="container mb-5">
-
-  <h1 class="mt-5" >
-    Sitema de Gestión de Inventario
-  </h1>
-  <p class="mt-2 mb-5" >Administra productos y transacciones de inventario</p>
+  <h1 class="mt-5">Sitema de Gestión de Inventario</h1>
+  <p class="mt-2 mb-5">Administra productos y transacciones de inventario</p>
 
   <mat-tab-group>
-  <mat-tab label="dashboard">
-    <zm-dashboard></zm-dashboard>
-  </mat-tab>
-  <mat-tab label="Gestión de Productos">
-    <zm-products></zm-products>
-  </mat-tab>
-  <mat-tab label="Transacción de inventario">
-    <h1>Some more tab content</h1>
-    <p>...</p>
-  </mat-tab>
-</mat-tab-group>
-
+    <mat-tab label="dashboard">
+      <zm-dashboard></zm-dashboard>
+    </mat-tab>
+    <mat-tab label="Gestión de Productos">
+      <zm-products></zm-products>
+    </mat-tab>
+    <mat-tab label="Transacción de inventario">
+      <zm-transactions></zm-transactions>
+    </mat-tab>
+  </mat-tab-group>
 </div>
