--- a/src/app/views/components/transactions/transactions.html
+++ b/src/app/views/components/transactions/transactions.html
@@ -2,12 +2,12 @@
   class="container mt-5 mb-5 d-flex align-items-center justify-content-between"
 >
   <div>
-    <h1>Gestión de Productos</h1>
-    <p class="text-muted">Administra el catálogo de productos</p>
+    <h1>Transacciones de Inventario</h1>
+    <p class="text-muted">Registra y monitorea movimientos de stock</p>
   </div>
   <button class="btn btn-dark">
     <i class="bi bi-plus-lg"></i>
-    <span class="mx-2" (click)="addProduct()"> Nuevo Producto </span>
+    <span class="mx-2" (click)="addProduct()"> Nueva Transacción </span>
   </button>
 </div>
 <div class="container">
@@ -19,23 +19,19 @@
     </mat-card-header>
     <mat-card-content class="mt-3">
       <div class="row align-items-end mb-3">
-        <div class="col-12 col-md-4">
-          <label for="searchType" class="form-label">Tipo de búsqueda</label>
-          <select class="form-select" id="searchType" [(ngModel)]="searchType">
-            <option value="category" selected>Categoría</option>
-            <option value="price">Precio</option>
-          </select>
-        </div>
         <div class="col-12 col-md-6">
-          <label for="searchInput" class="form-label">Buscar</label>
+          <label for="searchInput" class="form-label"
+            >Tipo de transacciòn</label
+          >
           <div class="input-group">
-            <input
-              type="text"
-              class="form-control"
-              id="searchInput"
-              [(ngModel)]="searchby"
-              placeholder="Buscar..."
-            />
+            <select
+              class="form-select"
+              id="searchType"
+              [(ngModel)]="searchType"
+            >
+              <option value="Compra" selected>Compra</option>
+              <option value="Venta">Venta</option>
+            </select>
             <button class="btn btn-primary" type="button" (click)="search()">
               <i class="bi bi-search"></i> Buscar
             </button>
@@ -49,9 +45,7 @@
 <div class="container mt-4">
   <mat-card class="example-card" appearance="outlined">
     <mat-card-header>
-      <mat-card-subtitle>
-        <i class="bi bi-box me-2"></i> Productos ({{totalProducts}})
-      </mat-card-subtitle>
+      <mat-card-subtitle> </mat-card-subtitle>
     </mat-card-header>
     <mat-card-content class="mt-3">
       <div class="d-flex justify-content-between align-items-center mb-2">
@@ -66,33 +60,31 @@
       <table class="table">
         <thead>
           <tr>
-            <th scope="col">#</th>
-            <th scope="col">Name</th>
-            <th scope="col">Description</th>
-            <th scope="col">Category</th>
-            <th scope="col">Price</th>
-            <th scope="col">Stock</th>
+            <th scope="col">Detail</th>
+            <th scope="col">Quantity</th>
+            <th scope="col">UnitPrice</th>
+            <th scope="col">TransactionType</th>
+            <th scope="col">TotalPrice</th>
             <th scope="col">Actions</th>
           </tr>
         </thead>
         <tbody>
-          <tr *ngFor="let product of pagedProducts; let i = index">
-            <th scope="row">{{ (currentPage - 1) * pageSize + i + 1 }}</th>
-            <td>{{ product.name }}</td>
-            <td>{{ product.description }}</td>
-            <td>{{ product.category }}</td>
-            <td>{{ product.price }}</td>
-            <td>{{ product.stock }}</td>
+          <tr *ngFor="let transaction of pagedTransactions; let i = index">
+            <td>{{ transaction.detail }}</td>
+            <td>{{ transaction.quantity }}</td>
+            <td>{{ transaction.unitPrice }}</td>
+            <td>{{ transaction.transactionType }}</td>
+            <td>{{ transaction.totalPrice }}</td>
             <td>
               <button
                 class="btn btn-sm btn-primary mx-2"
-                (click)="editProduct(product)"
+                (click)="editProduct(transaction)"
               >
                 Editar
               </button>
               <button
                 class="btn btn-sm btn-danger"
-                (click)="deleteProduct(product.productID)"
+                (click)="deleteProduct(transaction.transactionID)"
               >
                 Eliminar
               </button>
