--- a/src/app/views/components/dashboard/dashboard.html
+++ b/src/app/views/components/dashboard/dashboard.html
@@ -4,8 +4,6 @@
 </div>
 
 <div class="container d-flex mt-5">
-
-
   <!-- Card total products -->
   <div class="col-6 col-md-4 ms-3 w-25">
     <mat-card class="example-card" appearance="outlined">
@@ -21,51 +19,20 @@
     </mat-card>
   </div>
   <!-- Card total -->
-   <div class="col-6 col-md-4 ms-3 w-25">
+  <div class="col-6 col-md-4 ms-3 w-25">
     <mat-card class="example-card" appearance="outlined">
       <mat-card-header>
         <mat-card-subtitle>
-          <i class="bi bi-box me-2"></i> Total Productos
+          <i class="bi bi-box me-2"></i> Transacciones Hoy
         </mat-card-subtitle>
       </mat-card-header>
       <mat-card-content class="mt-3">
-        <h3>{{totalProducts}}</h3>
-        <p class="text-muted">Productos en catálogo</p>
-      </mat-card-content>
-    </mat-card>
-  </div>
-  <!-- Card Low Stock -->
-   <div class="col-6 col-md-4 ms-3 w-25">
-    <mat-card class="example-card" appearance="outlined">
-      <mat-card-header>
-        <mat-card-subtitle>
-          <i class="bi bi-box me-2"></i> Total Productos
-        </mat-card-subtitle>
-      </mat-card-header>
-      <mat-card-content class="mt-3">
-        <h3>{{totalProducts}}</h3>
-        <p class="text-muted">Productos en catálogo</p>
-      </mat-card-content>
-    </mat-card>
-  </div>
-  <!-- card transactions today -->
-   <div class="col-6 col-md-4 ms-3 w-25">
-    <mat-card class="example-card" appearance="outlined">
-      <mat-card-header>
-        <mat-card-subtitle>
-          <i class="bi bi-box me-2"></i> Total Productos
-        </mat-card-subtitle>
-      </mat-card-header>
-      <mat-card-content class="mt-3">
-        <h3>{{totalProducts}}</h3>
-        <p class="text-muted">Productos en catálogo</p>
+        <h3>{{totalTransactions}}</h3>
+        <p class="text-muted">Movimientos recientes</p>
       </mat-card-content>
     </mat-card>
   </div>
 
   <!-- Graphics -->
-   <div class="container">
-
-   </div>
-
+  <div class="container"></div>
 </div>
