--- a/src/app/views/components/products/add/add.html
+++ b/src/app/views/components/products/add/add.html
@@ -1,34 +1,64 @@
-<div class="container">
+<div class="container p-5">
   <div class="col-6 col-md-12">
     <h1>Agregar Producto</h1>
     <form [formGroup]="productForm" (ngSubmit)="save()">
-
       <div class="mb-3">
         <label for="name" class="form-label">Nombre</label>
-        <input type="text" class="form-control" id="name" formControlName="name">
+        <input
+          type="text"
+          class="form-control"
+          id="name"
+          formControlName="name"
+        />
       </div>
 
       <div class="mb-3">
         <label for="description" class="form-label">Descripción</label>
-        <textarea class="form-control" id="description" rows="3" formControlName="description"></textarea>
+        <textarea
+          class="form-control"
+          id="description"
+          rows="3"
+          formControlName="description"
+        ></textarea>
       </div>
 
       <div class="mb-3">
         <label for="category" class="form-label">Categoría</label>
-        <input type="text" class="form-control" id="category" formControlName="category">
+        <input
+          type="text"
+          class="form-control"
+          id="category"
+          formControlName="category"
+        />
       </div>
 
       <div class="mb-3">
         <label for="price" class="form-label">Precio</label>
-        <input type="number" class="form-control" id="price" formControlName="price">
+        <input
+          type="number"
+          class="form-control"
+          id="price"
+          formControlName="price"
+        />
       </div>
 
       <div class="mb-3">
         <label for="stock" class="form-label">Stock</label>
-        <input type="number" class="form-control" id="stock" formControlName="stock">
+        <input
+          type="number"
+          class="form-control"
+          id="stock"
+          formControlName="stock"
+        />
       </div>
 
-      <button type="submit" class="btn btn-primary" [disabled]="productForm.invalid">Agregar Producto</button>
+      <button
+        type="submit"
+        class="btn btn-primary"
+        [disabled]="productForm.invalid"
+      >
+        Agregar Producto
+      </button>
     </form>
   </div>
 </div>
