--- a/src/app/views/components/dashboard/dashboard.html
+++ b/src/app/views/components/dashboard/dashboard.html
@@ -3,9 +3,9 @@
   <p class="text-muted">Resumen ejecutivo del inventario</p>
 </div>
 
-<div class="container d-flex mt-5">
+<div class=" d-flex mt-5">
   <!-- Card total products -->
-  <div class="col-6 col-md-4 ms-3 w-25">
+  <div class="col-6 col-md-3 ">
     <mat-card class="example-card" appearance="outlined">
       <mat-card-header>
         <mat-card-subtitle>
@@ -19,16 +19,46 @@
     </mat-card>
   </div>
   <!-- Card total -->
-  <div class="col-6 col-md-4 ms-3 w-25">
+  <div class="col-6 col-md-3 mx-2">
     <mat-card class="example-card" appearance="outlined">
       <mat-card-header>
         <mat-card-subtitle>
-          <i class="bi bi-box me-2"></i> Transacciones Hoy
+          <i class="bi bi-calendar-check me-2 text-primary"></i>
+          Transacciones Hoy
         </mat-card-subtitle>
       </mat-card-header>
       <mat-card-content class="mt-3">
         <h3>{{totalTransactions}}</h3>
         <p class="text-muted">Movimientos recientes</p>
+      </mat-card-content>
+    </mat-card>
+  </div>
+  <!-- Card stock -->
+  <div class="col-6 col-md-3 mx-2">
+    <mat-card class="example-card" appearance="outlined">
+      <mat-card-header>
+        <mat-card-subtitle>
+          <i class="bi bi-exclamation-triangle-fill text-warning me-2"></i>
+          Stock Bajo
+        </mat-card-subtitle>
+      </mat-card-header>
+      <mat-card-content class="mt-3">
+        <h3>{{lowStockProducts}}</h3>
+        <p class="text-muted">Productos con stock crítico</p>
+      </mat-card-content>
+    </mat-card>
+  </div>
+  <!-- Card valor -->
+  <div class="col-6 col-md-3">
+    <mat-card class="example-card" appearance="outlined">
+      <mat-card-header>
+        <mat-card-subtitle>
+          <i class="bi bi-currency-dollar me-2"></i> Valor Total
+        </mat-card-subtitle>
+      </mat-card-header>
+      <mat-card-content class="mt-3">
+        <h3>${{totalInventoryValue}}</h3>
+        <p class="text-muted">Valor del inventario</p>
       </mat-card-content>
     </mat-card>
   </div>
