--- a/src/app/views/components/products/products.html
+++ b/src/app/views/components/products/products.html
@@ -5,43 +5,165 @@
     <h1>Gestión de Productos</h1>
     <p class="text-muted">Administra el catálogo de productos</p>
   </div>
-  <button class="btn btn-dark">
+  <button class="btn btn-dark" (click)="addProduct()">
     <i class="bi bi-plus-lg"></i>
-    <span class="mx-2" (click)="addProduct()"> Nuevo Producto </span>
+    <span class="mx-2" > Nuevo Producto </span>
   </button>
 </div>
 <div class="container">
   <mat-card class="example-card" appearance="outlined">
     <mat-card-header>
       <mat-card-subtitle>
-        <i class="bi bi-funnel me-2"></i> Filtros Avanzados
+        <i class="bi bi-funnel me-2 mb-3"></i> Filtros Avanzados
       </mat-card-subtitle>
     </mat-card-header>
     <mat-card-content class="mt-3">
-      <div class="row align-items-end mb-3">
-        <div class="col-12 col-md-4">
-          <label for="searchType" class="form-label">Tipo de búsqueda</label>
-          <select class="form-select" id="searchType" [(ngModel)]="searchType">
-            <option value="category" selected>Categoría</option>
-            <option value="price">Precio</option>
-          </select>
-        </div>
-        <div class="col-12 col-md-6">
-          <label for="searchInput" class="form-label">Buscar</label>
-          <div class="input-group">
-            <input
-              type="text"
-              class="form-control"
-              id="searchInput"
-              [(ngModel)]="searchby"
-              placeholder="Buscar..."
-            />
-            <button class="btn btn-primary" type="button" (click)="search()">
-              <i class="bi bi-search"></i> Buscar
-            </button>
+      <form class="form" [formGroup]="formProducts">
+        <div class="container">
+          <div class="row mb-5">
+            <!-- Lista de filtros aplicados -->
+            <div class="mt-3 mb-3" *ngIf="appliedFilters.length > 0">
+              <h6>Filtros aplicados:</h6>
+              <div class="d-flex flex-wrap gap-2">
+                <span
+                  class="badge bg-secondary d-flex align-items-center"
+                  *ngFor="let filter of appliedFilters; let i = index"
+                >
+                  {{ filter.label }}
+                  <button
+                    type="button"
+                    class="btn-close btn-close-white ms-2"
+                    aria-label="Close"
+                    (click)="removeFilter(i)"
+                  ></button>
+                </span>
+              </div>
+            </div>
+            <!-- busqueda general -->
+            <div class="col-6 col-md-4 ">
+              <label for="">Búsqueda General</label>
+              <input
+                type="text"
+                placeholder="Nombre, SKU, descripción ...."
+                class="form-control"
+                formControlName="generalSearch"
+              />
+            </div>
+            <!-- Categoria -->
+            <div class="col-6 col-md-4">
+              <label for="">Categoría</label>
+              <select
+                name=""
+                id=""
+                class="form-select"
+                formControlName="category"
+              >
+                <option value="all">Todas las categorias</option>
+                <option value="Laptops">Laptops</option>
+                <option value="Telefonos">Telefonos</option>
+                <option value="Monitores">Monitores</option>
+                <option value="Impresoras">Impresoras</option>
+              </select>
+            </div>
+            <!-- Precio Mínimo -->
+            <div class="col-6 col-md-4">
+              <label>Precio Mínimo</label>
+              <input
+                type="number"
+                placeholder="Precio Mínimo"
+                class="form-control"
+                formControlName="minPrice"
+                min="0"
+              />
+              <div *ngIf="formProducts.get('minPrice')?.errors?.['min']">
+                El valor no puede ser menor a 0.
+              </div>
+            </div>
+          </div>
+          <div class="row mt-4">
+            <!-- Precio Máximo -->
+            <div class="col-6 col-md-4">
+              <label>Precio Máximo</label>
+              <input
+                type="number"
+                placeholder="Precio Máximo"
+                class="form-control"
+                formControlName="maxPrice"
+                min="0"
+              />
+              <div *ngIf="formProducts.get('maxPrice')?.errors?.['min']">
+                El valor no puede ser menor a 0.
+              </div>
+            </div>
+            <!-- Stock Mínimo -->
+            <div class="col-6 col-md-4">
+              <label>Stock Mínimo</label>
+              <input
+                type="number"
+                placeholder="Precio Mínimo"
+                class="form-control"
+                formControlName="minStock"
+                min="0"
+              />
+              <div *ngIf="formProducts.get('minStock')?.errors?.['min']">
+                El valor no puede ser menor a 0.
+              </div>
+            </div>
+            <!-- Stock Máximo -->
+            <div class="col-6 col-md-4">
+              <label>Stock Máximo</label>
+              <input
+                type="number"
+                placeholder="Precio Mínimo"
+                class="form-control"
+                formControlName="maxStock"
+                min="0"
+              />
+              <div *ngIf="formProducts.get('maxStock')?.errors?.['min']">
+                El valor no puede ser menor a 0.
+              </div>
+            </div>
+          </div>
+          <div class="row mt-4">
+            <!-- Filtros Rápidos -->
+            <div class="col-6 col-md-4">
+              <label>Filtros Rápidos</label>
+              <div class="mt-2 d-flex gap-2">
+                <button
+                  class="btn btn-outline-secondary"
+                  (click)="filterStockLow()"
+                >
+                  Stock Bajo
+                </button>
+                <button
+                  class="btn btn-outline-secondary"
+                  (click)="filterPriceUnder100()"
+                >
+                  Precio < $100
+                </button>
+                <button
+                  class="btn btn-outline-secondary"
+                  (click)="filterPriceAbove500()"
+                >
+                  Precio > $500
+                </button>
+              </div>
+            </div>
+            <!-- btn buscar -->
+            <div class="col-6 col-md-4">
+              <label></label>
+              <div class="mt-2 d-flex gap-2">
+                <button
+                  class="btn btn-primary"
+                  (click)="searchByFilter()"
+                >
+                  Buscar
+                </button>
+              </div>
+            </div>
           </div>
         </div>
-      </div>
+      </form>
     </mat-card-content>
   </mat-card>
 </div>
@@ -54,15 +176,7 @@
       </mat-card-subtitle>
     </mat-card-header>
     <mat-card-content class="mt-3">
-      <div class="d-flex justify-content-between align-items-center mb-2">
-        <input
-          type="text"
-          class="form-control w-25"
-          placeholder="Buscar..."
-          [(ngModel)]="searchTerm"
-          (ngModelChange)="filterProducts()"
-        />
-      </div>
+      <div class="d-flex justify-content-between align-items-center mb-2"></div>
       <table class="table">
         <thead>
           <tr>
